# alldice

./: LICENSE  alldice.cabal
