name:                alldice
version:             0.1.0.0
synopsis:            An restful dice roller
-- description:
-- homepage:
license:             BSD3
license-file:        LICENSE
author:              Paul Berens
maintainer:          berens.paul@gmail.com
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  README.rst
cabal-version:       >=1.10

executable alldice
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:        -Wall -fno-warn-missing-signatures -O2 -rtsopts
  hs-source-dirs:      src
  extra-libraries:     pthread
  build-depends:       base >=4.5 && <4.7
                     , bytestring >= 0.10
                     , text
                     , network >= 2.5
